--- a/ejemplo_juego_responsivo.html
+++ b/ejemplo_juego_responsivo.html
@@ -6,40 +6,45 @@
     <title>Juego Responsivo de Ejemplo</title>
     <style>
         /* Estilos propios del juego, deben ser distintos al frame principal */
-        body {
+        
+        /* Contenedor raíz para el juego, aquí se aplica el fondo y estilos base del juego */
+        .game-wrapper-ejemplo {
             font-family: 'Comic Sans MS', cursive, sans-serif; /* Fuente distintiva */
-            background-color: #FFFACD; /* Amarillo Limón (LemonChiffon) */
+            background-color: #FFFACD; /* Amarillo Limón (LemonChiffon) - Fondo del "lienzo" del juego */
             color: #8B4513; /* Marrón (SaddleBrown) */
-            margin: 0;
+            margin: 0; /* Asegurarse que no haya márgenes extraños */
             padding: 15px;
             text-align: center;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            min-height: 90%; /* Para que ocupe espacio en el iframe/div */
+            height: 100%; /* Para que ocupe el alto del contenedor '.loaded-html-content' */
+            box-sizing: border-box; /* El padding no aumenta el tamaño total */
         }
 
-        .game-container {
+        /* El contenedor interno del juego con su propio estilo */
+        .game-wrapper-ejemplo .game-container {
             background-color: #F0E68C; /* Amarillo Caqui (Khaki) */
             padding: 20px;
             border-radius: 15px;
             box-shadow: 5px 5px 15px rgba(0,0,0,0.2);
-            width: 100%; /* Ocupa el ancho disponible del contenedor padre */
+            width: 100%; /* Ocupa el ancho disponible */
             max-width: 450px; /* Máximo ancho para el juego en sí */
         }
 
-        h1 {
+        /* Estilos para los elementos DENTRO del .game-wrapper-ejemplo */
+        .game-wrapper-ejemplo h1 {
             color: #D2691E; /* Chocolate */
             margin-bottom: 20px;
         }
 
-        p {
+        .game-wrapper-ejemplo p {
             font-size: 1.1em;
             margin-bottom: 15px;
         }
 
-        .number-display {
+        .game-wrapper-ejemplo .number-display {
             font-size: 2.5em;
             font-weight: bold;
             color: #228B22; /* Verde Bosque (ForestGreen) */
@@ -51,7 +56,7 @@
             min-width: 100px;
         }
 
-        button {
+        .game-wrapper-ejemplo button {
             background-color: #FF6347; /* Tomate */
             color: white;
             border: none;
@@ -63,54 +68,57 @@
             transition: background-color 0.3s, transform 0.1s;
         }
 
-        button:hover {
+        .game-wrapper-ejemplo button:hover {
             background-color: #E55337; /* Tomate más oscuro */
         }
-        button:active {
+        .game-wrapper-ejemplo button:active {
             transform: scale(0.95);
         }
 
-        #game-message {
+        .game-wrapper-ejemplo #game-message {
             margin-top: 15px;
             font-weight: bold;
             color: #4682B4; /* Azul Acero (SteelBlue) */
             height: 20px;
         }
 
-        /* Responsividad interna del juego */
+        /* Responsividad interna del juego (aplicada a elementos dentro de .game-wrapper-ejemplo) */
         @media (max-width: 400px) {
-            .game-container {
+            .game-wrapper-ejemplo .game-container {
                 padding: 15px;
             }
-            h1 {
+            .game-wrapper-ejemplo h1 {
                 font-size: 1.8em;
             }
-            p {
+            .game-wrapper-ejemplo p {
                 font-size: 1em;
             }
-            button {
+            .game-wrapper-ejemplo button {
                 padding: 10px 20px;
                 font-size: 0.9em;
             }
-            .number-display {
+            .game-wrapper-ejemplo .number-display {
                 font-size: 2em;
             }
         }
     </style>
 </head>
 <body>
-    <div class="game-container">
-        <h1>¡Mini Sumador!</h1>
-        <p>Haz clic en los botones para cambiar el número.</p>
-        <div id="number-display" class="number-display">0</div>
-        <button id="btn-add">Sumar 1</button>
-        <button id="btn-subtract">Restar 1</button>
-        <button id="btn-reset">Resetear</button>
-        <p id="game-message">¡Diviértete!</p>
+    <div class="game-wrapper-ejemplo">
+        <div class="game-container">
+            <h1>¡Mini Sumador!</h1>
+            <p>Haz clic en los botones para cambiar el número.</p>
+            <div id="number-display" class="number-display">0</div>
+            <button id="btn-add">Sumar 1</button>
+            <button id="btn-subtract">Restar 1</button>
+            <button id="btn-reset">Resetear</button>
+            <p id="game-message">¡Diviértete!</p>
+        </div>
     </div>
 
     <script>
         // Script simple para demostrar funcionalidad
+        // Asegurarse de que los selectores de ID siguen funcionando como se espera.
         const display = document.getElementById('number-display');
         const addButton = document.getElementById('btn-add');
         const subtractButton = document.getElementById('btn-subtract');
@@ -120,30 +128,37 @@
         let currentValue = 0;
 
         function updateDisplay() {
-            display.textContent = currentValue;
+            if (display) display.textContent = currentValue;
         }
 
-        addButton.addEventListener('click', () => {
-            currentValue++;
-            updateDisplay();
-            gameMessage.textContent = "¡Sumaste 1!";
-        });
+        if (addButton) {
+            addButton.addEventListener('click', () => {
+                currentValue++;
+                updateDisplay();
+                if (gameMessage) gameMessage.textContent = "¡Sumaste 1!";
+            });
+        }
 
-        subtractButton.addEventListener('click', () => {
-            currentValue--;
-            updateDisplay();
-            gameMessage.textContent = "¡Restaste 1!";
-        });
+        if (subtractButton) {
+            subtractButton.addEventListener('click', () => {
+                currentValue--;
+                updateDisplay();
+                if (gameMessage) gameMessage.textContent = "¡Restaste 1!";
+            });
+        }
         
-        resetButton.addEventListener('click', () => {
-            currentValue = 0;
-            updateDisplay();
-            gameMessage.textContent = "¡Contador reseteado!";
-        });
+        if (resetButton) {
+            resetButton.addEventListener('click', () => {
+                currentValue = 0;
+                updateDisplay();
+                if (gameMessage) gameMessage.textContent = "¡Contador reseteado!";
+            });
+        }
 
         // Mensaje para confirmar que el JS del juego se ejecutó
-        console.log("Script de 'ejemplo_juego_responsivo.html' ejecutado correctamente.");
-        alert("¡Bienvenido al Mini Sumador! El JavaScript de este juego se ha cargado.");
+        console.log("Script de 'ejemplo_juego_responsivo.html' (corregido) ejecutado correctamente.");
+        // El alert puede ser molesto para pruebas repetidas, considera comentarlo si es necesario.
+        // alert("¡Bienvenido al Mini Sumador! (Corregido) El JavaScript de este juego se ha cargado.");
         updateDisplay(); // Inicializar display
     </script>
 </body>
