--- a/pantalla_principal.html
+++ b/pantalla_principal.html
@@ -373,8 +373,7 @@
             <section class="sidebar-section">
                 <h3>Actividades y Juegos</h3>
                 <ul class="sidebar-list" id="activity-list">
-                    <li><a href="ejemplo_juego_responsivo.html" data-content-type="activity">
-                        <span class="icon-placeholder">🧮</span><span class="link-text">Simulador de Interés Compuesto</span>
+                    <li><a href="001 - Simulador.html" data-content-type="activity"> <span class="icon-placeholder">🧮</span><span class="link-text">Simulador de Interés Compuesto</span>
                     </a></li>
                     <li><a href="rueda_decisiones.html" data-content-type="activity">
                         <span class="icon-placeholder">🎲</span><span class="link-text">Rueda de Decisiones</span>
