--- a/pantalla_principal.html
+++ b/pantalla_principal.html
@@ -376,7 +376,7 @@
                     <li><a href="001 - Simulador.html" data-content-type="activity" data-content-src="001 - Simulador.html">
                         <span class="icon-placeholder">🧮</span><span class="link-text">Simulador de Interés Compuesto</span>
                     </a></li>
-                    <li><a href="rueda_decisiones.html" data-content-type="activity" data-content-src="rueda_decisiones.html">
+                    <li><a href="002 - Rueda decisiones financieras.html" data-content-type="activity" data-content-src="002 - Rueda decisiones financieras.html">
                         <span class="icon-placeholder">🎲</span><span class="link-text">Rueda de Decisiones</span>
                     </a></li>
                      <li><a href="planificador.html" data-content-type="activity" data-content-src="planificador.html">
